<resources>
    <string name="app_name">VGN TALK DESK</string>
    <string name="loginPage"><u>Login Page</u>
    </string>
    <string name="txt_devicetype">Android</string>
    <string name="txt_version_code">1.1</string>
    <string name="txt_network">Not Connected to Network</string>
    <string name="txt_error_msg">Error Message...</string>
    <string name="txt_Ok">Ok</string>
    <string name="txt_enter_otp">Enter otp</string>
    <string name="txt_accept_terms_and_condition">Accept Terms And Condition</string>
    <string name="txt_enter_e_mail">Enter your e-mail</string>
    <string name="txt_create_password">Create password</string>
    <string name="txt_enter_password">Enter password</string>
    <string name="txt_Enter_pswrd">Enter your password</string>
    <string name="txt_next">Next</string>
    <string name="txt_confirm_your_password">Confirm Your Password</string>
    <string name="txt_sign_in">Sign in</string>
    <string name="txt_forgot_password">Forgot \nPassword?</string>
    <string name="txt_change_password">Change Password?</string>
    <string name="txt_single_forgot_password">Forgot Password?</string>
    <string name="txt_new_password">Enter New Password</string>
    <string name="txt_confirm_new_password">Confirm New Password</string>
    <string name="txt_no_data_found">No Data Found</string>
    <string name="txt_Yes">Yes</string>
    <string name="txt_No">No</string>
    <string name="txt_Color_alert">#d81159</string>
    <string name="txt_download">Download</string>

    <string name="txt_empty_password">Password field should be empty</string>
    <string name="txt_password_notsimilar">Passwords are not similar</string>
    <string name="txt_weak_password">Password is too weak,should have special characters and minimum 8</string>
    <string name="txt_missed_calls">Missed Calls</string>
    <string name="txt_recieved_calls">Recieved Calls</string>
    <string name="txt_SignIn">Sign In</string>
    <string name="txt_notifications">Notifications</string>
    <string name="txt_info">Customer Info</string>
    <string name="txt_help">Help</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_recent_calls">Recent Calls</string>
    <string name="an_4_digit_code_has_been_sent_to">An 6 digit code has been sent to registered email or mobilenumber</string>
    <string name="terms_condition">Terms &amp; Conidtions</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="by_signing_up_you_are_agree_to_our_terms_amp_conidtions"><![CDATA[By proceeding you agree to the]]></string>

    <string name="txt_SignUp">Sign In</string>
    <string name="txt_followup_completed">FollowUp Completed</string>

    <string name="sentence_with_new_line_tag">This is the first sentence\nThis is the second scentence\nThis is the third sentence</string>


</resources>